je parss sur une branch

--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
-<body>
-	<h1>Hello</h1>
-</body>
+{% extends 'base.html' %}
+
+{% block body %}
+<div>
+	<h1>Caca</h1>
+</div>
+{% endblock %}
