--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -9,8 +9,11 @@
     <div id="navbar">
         <div id="logoTGT">
             <a href="/">
-                <img src="public/img/logoTGT.jpg">
+                <img src="static/img/logoTGT.jpg" width="150" height="100">
             </a>
+        </div>
+        <div id="loginBTN">
+            <a href="/auth/login">login</a>
         </div>
     </div>
     {% block body %}{% endblock %}
