--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<div>
+<div class="background">
 	<h1>Welcome to TGT</h1>
-	<img src="static/img/thinking.jpg" >
+	<img src="static/img/thinking.jpg">
 </div>
 {% endblock %}
