--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -4,5 +4,6 @@
 <div class="background">
 	<h1>Welcome to TGT</h1>
 	<img src="static/img/thinking.jpg">
+	<img src="static/img/ratherbefishin.png">
 </div>
 {% endblock %}
