--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -10,6 +10,7 @@
         <div id="logoTGT">
             <a href="/">
                 <img src="static/img/logoTGT.jpg" width="150" height="100">
+                <img src="static/img/ratherbefishin.png" title="I'd rather be fishin">
             </a>
         </div>
         <div id="loginBTN">
