--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,14 +7,14 @@
 <link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <div id="navbar">
-        <div id="logoTGT">
+    <div class="navbar">
+        <div class="logoTGT">
             <a href="/">
                 <img src="static/img/logoTGT.jpg" width="150" height="100">
                 <img src="static/img/ratherbefishin.png" title="I'd rather be fishin">
             </a>
         </div>
-        <div id="loginBTN">
+        <div class="loginBTN">
             <a href="/auth/login">login</a>
         </div>
     </div>
