--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,14 +7,16 @@
 <link href="static/css/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <div class="navbar">
-    <div id="logoTGT">
+    <div class="logoTGT">
         <a href="/">
             <img src="static/img/logoTGT.jpg" width="150" height="100">
         </a>
     </div>
-    <a href="/auth/login">login</a>
-</div>
+    <div class="navbar">
+        <ul>
+            <li><a href="/auth/login">login</a></li>
+        </ul>
+    </div>
 
     {% block body %}{% endblock %}
 
