--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -3,6 +3,6 @@
 {% block body %}
 <div class="background">
 	<h1>Welcome to TGT</h1>
-	<img src="static/img/thinking.jpg">
+	<img src="{{ url_for('static', filename='img/thinking.jpg') }}">
 </div>
 {% endblock %}
