1ère version "présentable" du site
j'ai pas encore totalement fini mais c'est présentable.

--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<div class="background">
-	<h1>Welcome to TGT</h1>
-	<img src="static/img/thinking.jpg">
-	<img src="static/img/ratherbefishin.png">
+    <div style="max-width: 800px; width: 100%;">
+	<marquee><h1 style="font-family: 'Piersob'; letter-spacing: 4px; color: var(--semiwhite); filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));">Welcome to TGT</h1></marquee>
+	</div>
+	<div class="containermain">
+		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+		<img src="static/img/logoTGT.jpg" style="float: left;" width="150px">
+		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+	</div>
 </div>
 {% endblock %}
