--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -1,34 +1,217 @@
 body
 {
- background-color: rgb(192, 179, 0);
+ background: linear-gradient(rgb(224, 153, 153) 60%, rgb(126, 201, 126) 100%);
  display: flex;
  flex-direction: column;
- background-image: url('static/img/ratherbefishin.png');
+ align-items: center;
+ margin: 0px;
+ overflow-wrap: normal;
+ overflow-x: hidden;
+}
+:root
+{
+  --semiwhite: #f0f0f0;  
+}
+@font-face {
+  font-family: 'PlanetKosmos';
+  src: url('static/fonts/PlanetKosmos.ttf');
 }
 
-/* Style the top navigation bar */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
+@font-face {
+  font-family: 'Kredit';
+  src: url('static/fonts/KreditBack.ttf');
 }
 
-/* Style the topnav links */
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
+@font-face {
+  font-family: 'Piersob';
+  src: url('static/fonts/Piersob.otf');
+}
+@font-face {
+  font-family: 'Photonica';
+  src: url('static/fonts/Photonica_straight.ttf');
+}
+@font-face {
+  font-family: 'OCRA';
+  src: url('static/fonts/OCRAEXT.TTF');
+}
+p
+{
+  font-family: 'OCRA', Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  color: var(--semiwhite);
+}
+.maintitle
+{
+
+  font-family: 'PlanetKosmos', Arial, Helvetica, sans-serif;
+  font-size: 60px;
   text-align: center;
-  padding: 14px 16px;
+  color: var(--semiwhite);
+  letter-spacing: 2px;
+  line-height: 60px;
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  transition: filter 0.4s;
+  animation: titleupanddown 2s ease-in-out infinite alternate;
+}
+@keyframes titleupanddown
+{
+  0%
+  {
+    transform: translateY(2%) rotate(2deg) scale(100%);
+  }
+  100%
+  {
+    transform: translateY(-2%) rotate(2deg) scale(99%);
+  }
+}
+.titlesmall
+{
+
+  font-family: 'PlanetKosmos', Arial, Helvetica, sans-serif;
+  font-size: 60px;
+  text-align: center;
+  color: var(--semiwhite);
+  letter-spacing: 4px;
+  line-height: 60px;
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  transition: filter 0.4s;
+}
+.titlecontainer
+{
+  width: 100%;
+  background-image: url('static/img/skyboxes_40.png');
+  background-size: cover;
+  background-position: bottom;
+  filter: hue-rotate(45deg);
+}
+.maintitle:hover
+{
+  filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
+}
+.titlesmall:hover
+{
+  filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
+}
+.navbar
+{
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  gap: 4px;
+  align-items: center;
+  justify-content: center;
+  /*border: 8px solid var(--semiwhite);*/
+  border-radius: 120px;
+  padding-left: 12px;
+  padding-right: 12px;
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  max-width: 900px;
+  width: 100%;
+  margin-top: 40px;
+}
+/*.navbutton {
+    width: 200px;
+    height: 60px;
+    font-family: 'PlanetKosmos', Arial, Helvetica, sans-serif;
+    text-align: center;
+    text-shadow: 2px 2px 4px black;
+    font-size: 24px;
+    line-height: 60px;
+    border-radius: 32px;
+    letter-spacing: 4px;
+    color: rgb(240, 240, 240);
+    background: linear-gradient(white 0%, rgb(214 241 160) 25%, rgb(36 121 55) 80%, #252525 100%);
+    filter: drop-shadow(2px 2px 2px black);
+    transition: all 1s ease-out;
+}
+
+.navbutton:hover {
+    background: linear-gradient(white 0%, rgb(241 160 160) 25%, rgb(109, 34, 34) 80%, #252525 100%);
+    filter: drop-shadow(2px 2px 2px black);
+} */
+
+.navbutton {
+    width: 200px;
+    height: 60px;
+    font-family: 'PlanetKosmos', Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 24px;
+    line-height: 60px;
+    border: 4px solid var(--semiwhite);
+    border-radius: 40px;
+    letter-spacing: 2px;
+    color: rgb(240, 240, 240);
+    /*background: linear-gradient(white 0%, rgb(214 241 160) 25%, rgb(36 121 55) 80%, #252525 100%);*/
+    filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+    transition: all 1s ease-out;
+}
+
+.navbutton:hover {
+    /*background: linear-gradient(white 0%, rgb(241 160 160) 25%, rgb(109, 34, 34) 80%, #252525 100%);*/
+  filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
+  transform: rotate(4deg);
+}
+.navbar a
+{
   text-decoration: none;
 }
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
+.dropshadowpink
+{
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
 }
-  
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.containermain
+{
+  max-width: 800px;
+  width: 100%;
+  height: 1000px;
+  border: 4px solid var(--semiwhite);
+  border-radius: 40px;
+  backdrop-filter: blur(4px);
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  padding: 16px;
+  overflow-y: auto;
+  scrollbar-color: var(--semiwhite) #00000000;
+  scrollbar-width: thin;
+}
+.footerdecoration
+{
+  position: fixed;
+  width: 100%;
+  height: 1000px;
+  left: 0px;
+  bottom: 0px;
+  background-image: url('static/img/foregrounds_11.png');
+  background-size: cover;
+  filter: hue-rotate(45deg);
+  z-index: -1;
+}
+footer
+{
+  display: flex;
+  flex-flow: column;
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  margin: 16px;
+
+}
+footer p
+{
+text-align: center;
+}
+.first-div
+{
+  display: flex;
+  flex-flow: column;
+}
+form
+{
+  display: flex;
+  flex-flow: column;
+  gap: 16px;
+}
+label
+{
+  font-family: 'OCRA', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--semiwhite);
 }
