--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -5,13 +5,13 @@
 {% endblock %} -->
 
 {% block body %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <div class="first-div">
 	<div class="left-div">
 		<img src="{{ url_for('static', filename='img/folie.png') }}">
 	</div>
 	<div class="right-div">
-		<h1>Login</h1>
+		<h1 class="titlesmall">Login</h1>
 		<form method="POST" action="/login">
 		<label for="username">Nom d'utilisateur :</label>
 		<input type="text" id="username" name="username" required>
