--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -105,9 +105,9 @@ p
   padding-left: 12px;
   padding-right: 12px;
   filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
-  max-width: 900px;
+  max-width: 1200px;
   width: 100%;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 /*.navbutton {
     width: 200px;
@@ -142,6 +142,7 @@ p
     letter-spacing: 2px;
     color: rgb(240, 240, 240);
     /*background: linear-gradient(white 0%, rgb(214 241 160) 25%, rgb(36 121 55) 80%, #252525 100%);*/
+    backdrop-filter: blur(2px);
     filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
     transition: all 1s ease-out;
 }
@@ -172,6 +173,7 @@ p
   overflow-y: auto;
   scrollbar-color: var(--semiwhite) #00000000;
   scrollbar-width: thin;
+  overflow: visible;
 }
 .footerdecoration
 {
@@ -195,12 +197,25 @@ footer
 }
 footer p
 {
+font-weight: bold;
 text-align: center;
+font-size: 18px;
+}
+footer a
+{
+color: var(--semiwhite);
 }
 .first-div
 {
   display: flex;
   flex-flow: column;
+  align-items: center;
+}
+.right-div
+{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 form
 {
@@ -214,4 +229,115 @@ label
   font-size: 18px;
   font-weight: bold;
   color: var(--semiwhite);
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+}
+input
+{
+  font-family: 'OCRA', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  height: 30px;
+  border: 4px solid var(--semiwhite);
+  border-radius: 40px;
+  background-color: rgba(210, 236, 210, 0);
+  color: var(--semiwhite);
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  transition: all 1s ease-out;
+  backdrop-filter: blur(2px);
+  outline: none;
+}
+input:focus
+{
+  filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
+}
+.center-div
+{
+  width: 400px;
+}
+.buttonsignuplogin
+{
+    height: 60px;
+    font-family: 'PlanetKosmos', Arial, Helvetica, sans-serif;
+    background-color: transparent;
+    text-align: center;
+    font-size: 24px;
+    line-height: 60px;
+    border: 4px solid var(--semiwhite);
+    border-radius: 40px;
+    letter-spacing: 2px;
+    color: rgb(240, 240, 240);
+    backdrop-filter: blur(2px);
+    filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+    transition: all 1s ease-out;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    cursor: pointer;
+}
+.buttonsignuplogin:hover {
+  filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
+  transform: rotate(2deg);
+}
+.containermaintext
+{
+  width: 100%;
+  z-index: 20;
+}
+.containermaindecoration
+{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+}
+.pictureframeborder
+{
+  border-image-source: url('static/img/border-image.png');
+  border-image-slice: 70;
+  border-image-repeat: stretch;
+  border-width: 20px;
+  border-style: solid;
+}
+/*.floatingimages
+{
+  animation: floatingimage 1s ease-in-out infinite alternate;
+}
+@keyframes floatingimage
+{
+  0%
+  {
+    transform: translateY(4%) translateX(2%) scale(100%);
+  }
+  25%
+  {
+    transform: translateY(-2%) translateX(-4%) scale(99%);
+  }
+  50%
+  {
+    transform: translateY(-1%) translateX(1%)scale(99%);
+  }
+  75%
+  {
+    transform: translateY(4%) translateX(2%) scale(99%);
+  }
+  100%
+  {
+    transform: translateY(-2%) translateX(-1%) scale(99%);
+  }
+}*/
+.chatbox
+{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  margin-top: 32px;
+  max-width: 800px;
+  width: 100%;
+  height: 400px;
+}
+.chatcontainer
+{
+  display: flex;
+  justify-content: center;
+  max-width: 800px;
+  height: 400px;
 }
