--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -4,10 +4,28 @@
     <div style="max-width: 800px; width: 100%;">
 	<marquee><h1 style="font-family: 'Piersob'; letter-spacing: 4px; color: var(--semiwhite); filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));">Welcome to TGT</h1></marquee>
 	</div>
-	<div class="containermain">
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-		<img src="static/img/logoTGT.jpg" style="float: left;" width="150px">
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-	</div>
-</div>
+		<div class="containermain">
+		<img style="position: absolute; left: -250px; bottom: -40px; z-index: 40; transform: rotate(2deg);" src="{{ url_for('static', filename='img/pillarcolumn2.png') }}">
+		<img class="pictureframeborder" src="static/img/logoTGT.jpg" style="position: absolute; right: -300px; top: 60px; transform: rotate3d(11, 25, 8, 350deg)" width="150px" height="250px">
+        <img class="dropshadowpink" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="150px" style="position: absolute; right: -415px; top: -40px; transform: rotate(2deg);">
+        <img class="dropshadowpink" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="140px" style="position: absolute; left: -415px; top: 400px; transform: rotate(2deg) scaleX(-1);">
+		<img src="static/img/vines-png-43652.png" style="position: absolute; left: 0px; top: -20px; transform: rotate(-4deg); filter: hue-rotate(180deg);" width="400px">
+		<img src="static/img/sealife_1.png" style="position: absolute; right: -450px; top: 600px; transform: rotate(25deg); filter: hue-rotate(180deg);" width="300px">
+		<img src="static/img/sealife_13.png" style="position: absolute; left: -500px; top: 60px; transform: rotate(-25deg); filter: hue-rotate(40deg);" width="300px">
+		<div class="containermaintext">
+				<p style=>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+			</div>
+		</div>
+		<div class="chatbox">
+		<div class="chatcontainer">
+			<iframe src='https://beta.iframe.chat/embed?chat=49304260' id='chattable' frameborder='none' width="800"></iframe>
+		<script>
+		  chattable.initialize({
+		    stylesheet : "static/css/chattable.css",
+		  });
+		</script>
+		</div>
+		</div>
 {% endblock %}
