--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -10,8 +10,8 @@
 	<div class="left-div">
 		<!--<img src="{{ url_for('static', filename='img/register.jpg') }}" width="800" height="400">-->
 	</div>
-	<div class="right-div">
-		<h1 class="titlesmall">Enregistrement</h1>
+		<h1 class="titlesmall">S'enregistrer</h1>
+		<div class="center-div">
 		<form method="POST" action="/login">
 		<label for="username">Nom d'utilisateur:</label>
 		<input type="text" id="username" name="username" required>
@@ -21,8 +21,8 @@
 		<input type="password" id="password" name="password" required>
 		<label for="password2">Confirmez le mot de passe:</label>
 		<input type="password2" id="password2" name="password2" required>
-		<button type="submit">Connexion</button>
+		<button type="submit" class="buttonsignuplogin">S'enregistrer !</button>
 		</form>
-	</div>
+		</div>
 </div>
 {% endblock %}
