--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -13,7 +13,7 @@
 	<div class="right-div">
 		<h1 class="titlesmall">Connexion</h1>
 		<div class="center-div">
-		<form method="POST" action="/login">
+		<form method="POST" action="/auth/login">
 		<label for="username">Nom d'utilisateur:</label>
 		<input type="text" id="username" name="username" required>
 		<label for="password">Mot de passe:</label>
