--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -12,7 +12,7 @@
 	</div>
 		<h1 class="titlesmall">S'enregistrer</h1>
 		<div class="center-div">
-		<form method="POST" action="/login">
+		<form method="POST" action="/auth/register">
 		<label for="username">Nom d'utilisateur:</label>
 		<input type="text" id="username" name="username" required>
 		<label for="email">E-mail:</label>
@@ -20,7 +20,7 @@
 		<label for="password">Mot de passe:</label>
 		<input type="password" id="password" name="password" required>
 		<label for="password2">Confirmez le mot de passe:</label>
-		<input type="password2" id="password2" name="password2" required>
+		<input type="password" id="password2" name="password2" required>
 		<button type="submit" class="buttonsignuplogin">S'enregistrer !</button>
 		</form>
 		</div>
