--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -164,7 +164,7 @@ p
 {
   max-width: 800px;
   width: 100%;
-  height: 1000px;
+  height: 800px;
   border: 4px solid var(--semiwhite);
   border-radius: 40px;
   backdrop-filter: blur(4px);
@@ -174,6 +174,7 @@ p
   scrollbar-color: var(--semiwhite) #00000000;
   scrollbar-width: thin;
   overflow: visible;
+  margin-top: 200px;
 }
 .footerdecoration
 {
@@ -333,6 +334,11 @@ input:focus
   max-width: 800px;
   width: 100%;
   height: 400px;
+  border: 4px solid var(--semiwhite);
+  border-radius: 40px;
+  backdrop-filter: blur(4px);
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+  padding: 16px;
 }
 .chatcontainer
 {
@@ -340,4 +346,5 @@ input:focus
   justify-content: center;
   max-width: 800px;
   height: 400px;
+
 }
