--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -18,20 +18,22 @@
     </a>
     </div>
     <div class="navbar">
-        <img class="dropshadowpink" src="{{ url_for('static', filename='img/8080_vapor_bust_spin.gif') }}" width="100px">
+        <!--<img class="dropshadowpink" src="{{ url_for('static', filename='img/8080_vapor_bust_spin.gif') }}" width="100px">-->
+        <img class="dropshadowpink" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="80px">
         <a href="/auth/login"><div class="navbutton">LOGIN</div></a>
         <a href="/auth/register"><div class="navbutton">REGISTER</div></a>
-        <img class="dropshadowpink" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="50px">
+<img class="dropshadowpink" src="{{ url_for('static', filename='img/8080_vapor_bust_spin.gif') }}" width="100px">
         <a href="/auth/login"><div class="navbutton">MEMBERS</div></a>
         <a href="/auth/login"><div class="navbutton">CREDITS</div></a>
-        <img class="dropshadowpink" src="{{ url_for('static', filename='img/8080_vapor_bust_spin.gif') }}" width="100px">
+        <img class="dropshadowpink" style="transform: scaleX(-1);" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="80px">
+        <!--<img class="dropshadowpink" src="{{ url_for('static', filename='img/8080_vapor_bust_spin.gif') }}" width="100px">-->
     </div>
 
     {% block body %}{% endblock %}
 
 <footer>
     <p style="margin-bottom: 16px;">Track Goals Together<br>© 2025 - Forever!<br>*<br>Proudly made by <a href="https://github.com/Xenhoxi">Xenhoxi</a> and <a href="https://github.com/705mmes">705</a><br>Website layout proudly made by <a target="_blank" href="https://xsolimini.fr">xsolimini</a></p>
-    <div style="margin-left: auto; margin-right: auto;"><a target="_blank" href="https://xsolimini.fr"><img src="https://xsolimini.fr/images/xsoliminishq88x31.gif"></a> <img src="{{ url_for('static', filename='img/ratherbefishin.png') }}"> <img src="{{ url_for('static', filename='img/bestviewedcomp.gif') }}"> <img src="{{ url_for('static', filename='img/xp.gif') }}"> <img src="{{ url_for('static', filename='img/ad37.gif') }}" width="88" height="31"> <img src="{{ url_for('static', filename='img/button-flexbox_by_Yatagarasu.gif') }}"> <img src="{{ url_for('static', filename='img/image (1).png') }}"></div>
+    <div style="margin-left: auto; margin-right: auto;"><a target="_blank" href="https://xsolimini.fr"><img src="https://xsolimini.fr/images/xsoliminishq88x31.gif"></a> <img src="{{ url_for('static', filename='img/ratherbefishin.png') }}"> <img src="{{ url_for('static', filename='img/bestviewedcomp.gif') }}"> <img src="{{ url_for('static', filename='img/xp.gif') }}"> <img src="{{ url_for('static', filename='img/ad37.gif') }}" width="88" height="31"> <img src="{{ url_for('static', filename='img/button-flexbox_by_Yatagarasu.gif') }}"> <img src="{{ url_for('static', filename='img/image (1).png') }}"> <img src="{{ url_for('static', filename='img/vscbutton.gif') }}"></div>
 </footer>
 <div class="footerdecoration"></div>
 </div>
