--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -100,13 +100,11 @@ p
   gap: 4px;
   align-items: center;
   justify-content: center;
-  /*border: 8px solid var(--semiwhite);*/
+  border: 4px dotted var(--semiwhite);
   border-radius: 120px;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
   filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
-  max-width: 1200px;
-  width: 100%;
   margin-top: 20px;
 }
 /*.navbutton {
@@ -151,6 +149,8 @@ p
 
 .navbutton:hover {
     /*background: linear-gradient(white 0%, rgb(241 160 160) 25%, rgb(109, 34, 34) 80%, #252525 100%);*/
+  background-color: var(--semiwhite);
+  color: rgb(224, 153, 153);
   filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
   transform: rotate(4deg);
 }
@@ -168,7 +168,7 @@ p
     /*background: linear-gradient(white 0%, rgb(214 241 160) 25%, rgb(36 121 55) 80%, #252525 100%);*/
     backdrop-filter: blur(2px);
     filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
-    transition: all 1s ease-out;
+    transition: all 0.2s ease-out;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -176,8 +176,10 @@ p
 
 .navbuttonsmaller:hover {
     /*background: linear-gradient(white 0%, rgb(241 160 160) 25%, rgb(109, 34, 34) 80%, #252525 100%);*/
+  background-color: #00000000;
+  color: var(--semiwhite);
   filter: drop-shadow(2px 2px 8px rgb(224, 255, 188));
-  transform: rotate(4deg);
+
 }
 .navbar a
 {
@@ -198,7 +200,7 @@ p
   max-width: 800px;
   width: 100%;
   height: 800px;
-  border: 4px solid var(--semiwhite);
+  border: 4px dotted var(--semiwhite);
   border-radius: 40px;
   backdrop-filter: blur(4px);
   filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
@@ -367,7 +369,7 @@ input:focus
   max-width: 800px;
   width: 100%;
   height: 400px;
-  border: 4px solid var(--semiwhite);
+  border: 4px dotted var(--semiwhite);
   border-radius: 40px;
   backdrop-filter: blur(4px);
   filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
