--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -314,7 +314,11 @@ input:focus
 }
 .containermaintext
 {
+  max-width: 750px;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
   z-index: 20;
 }
 .containermaindecoration
