--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -14,8 +14,10 @@
 		<img class="pictureframeborder" src="static/img/gaben.jpg" style="position: absolute; left: -480px; top: 400px; transform: rotate3d(22, 53, -8, 324deg)" width="200px" height="100px">
 		<img class="dropshadowpink" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="120px" style="position: absolute; left: -320px; top: -40px; transform: rotate(2deg);">
         <img class="dropshadowpink" src="{{ url_for('static', filename='img/y2kstars.png') }}" width="100px" style="position: absolute; right: -305px; top: 0px; transform: rotate(2deg) scaleX(-1);">
-		<img src="static/img/vines-png-43652.png" style="position: absolute; left: 0px; top: -5px; transform: rotate(-4deg); filter: hue-rotate(180deg); z-index: 20;" width="400px">
-		<img src="static/img/vines-png-43656.png" style="position: absolute; left: -40px; top: 15px; transform: rotate(-4deg); filter: hue-rotate(180deg); z-index: 20;" width="150px">
+		<img src="static/img/vines-png-43652.png" style="position: absolute; left: 25px; top: -5px; transform: rotate(-4deg); filter: hue-rotate(180deg); z-index: 20;" width="400px">
+		<img src="static/img/vines-png-43656.png" style="position: absolute; left: -40px; top: 15px; transform: rotate(0deg); filter: hue-rotate(180deg); z-index: 20;" width="150px">
+		<img src="static/img/vines-png-43652.png" style="position: absolute; right: 25px; top: -5px; transform: rotate(4deg) scaleX(-1); filter: hue-rotate(180deg); z-index: 20;" width="400px">
+		<img src="static/img/vines-png-43656.png" style="position: absolute; right: -40px; top: 15px; transform: rotate(0deg) scaleX(-1); filter: hue-rotate(180deg); z-index: 20;" width="150px">
 		<img src="static/img/sealife_1.png" style="position: absolute; right: -500px; top: 600px; transform: rotate(25deg); filter: hue-rotate(180deg);" width="300px">
 		<img src="static/img/sealife_13.png" style="position: absolute; left: -550px; top: 60px; transform: rotate(-25deg); filter: hue-rotate(40deg);" width="300px">
 		<img style="position: absolute; top: -210px; z-index: 10; left: -22px; image-rendering: pixelated;" src="static/img/plaster-pediments-model-D-6.png" width="880px">
