--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -34,6 +34,10 @@ body
   font-family: 'OCRA';
   src: url('/static/fonts/OCRAEXT.TTF');
 }
+@font-face {
+  font-family: 'Tahomaclassic';
+  src: url('/static/fonts/windows-xp-tahoma.otf');
+}
 p
 {
   font-family: 'OCRA', Arial, Helvetica, sans-serif;
@@ -193,6 +197,89 @@ p
   display: flex;
   flex-flow: column;
   gap: 4px;
+}
+.dailystuff
+{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+  height: 400px;
+  margin-top: 32px;
+}
+.dailystuffline
+{
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+}
+.windowsxpwindow
+{
+  display: flex;
+  flex-flow: column;
+  background: linear-gradient(rgb(224, 153, 153) 0.4%, rgb(206, 87, 87) 2%, rgb(206, 87, 87) 90%, rgb(192, 82, 82) 100%);
+  height: 250px;
+  width: 350px;
+  border: 1px ridge pink;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  overflow: hidden;
+  filter: drop-shadow(2px 2px 4px rgb(255, 155, 155));
+}
+.windowsxpwindowtitle
+{
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  height: 30px;
+  width: 350px;
+  padding-left: 8px;
+}
+.windowsxptexttitle
+{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+.windowsxpwindowcontent
+{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 342px;
+  height: 214px;
+  background-color: #FAF6DE;
+  align-self: center;
+  border: 1px inset pink;
+}
+.windowsxpwindowimagecontainer
+{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 330px;
+  height: 150px;
+  overflow: hidden;
+  margin-top: 8px;
+  margin-bottom: 16px;
+}
+.windowsxpwindowbutton
+{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  width: 90px;
+  height: 20px;
+  background: linear-gradient(#fffce8 10%, #FAF6DE 90%, #dfd9b7 100%);
+  border: 2px ridge  pink;
+  border-radius: 4px;
+}
+.windowsxptext
+{
+  font-family: 'Tahomaclassic', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  color: black;
 }
 .dropshadowpink
 {
